--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-updater-example",
-  "version": "0.7.1",
+  "version": "1.0.1",
   "main": "main.js",
   "description": "electron-updater example project",
   "author": "Matt Haggard",
@@ -11,12 +11,16 @@
     "electron": "^3.0.2",
     "electron-builder": "^20.28.4"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/20matan/electron-updater-example.git"
+  },
   "dependencies": {
     "electron-log": "^1.3.0",
     "electron-updater": "^4.0.6"
   },
   "build": {
-    "appId": "com.github.iffy.electronupdaterexample",
+    "appId": "com.github.20matan.electronupdaterexample",
     "mac": {
       "category": "your.app.category.type",
       "target": [
