--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-updater-example",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "main": "main.js",
   "description": "electron-updater example project",
   "author": "Matt Haggard",
@@ -27,6 +27,11 @@
         "zip",
         "dmg"
       ]
+    },
+    "publish": {
+      "provider": "s3",
+      "bucket": "matan-electron-auto-update-test",
+      "region": "us-west-2"
     }
   }
 }
